#244 feat: 테스트코드